Fix bugs in index (wrong id on header) and framework (added flex-wrap: wrap back in)

--- a/css/framework.css
+++ b/css/framework.css
@@ -2,45 +2,46 @@
 	width: 100%;
 	max-width: 1200px;
 	display: flex;
+	flex-wrap: wrap;
 }
 
-.row{
+.row {
 	width: 100%;
 }
 
-.col-1{
+.col-1 {
 	width: 8.33%;
 }
-.col-2{
+.col-2 {
 	width: 16.66%;
 }
-.col-3{
+.col-3 {
 	width: 25%;
 }
-.col-4{
+.col-4 {
 	width: 33.33%;
 }
-.col-5{
+.col-5 {
 	width: 41.66%;
 }
-.col-6{
+.col-6 {
 	width: 50%;
 }
-.col-7{
+.col-7 {
 	width: 58.33%;
 }
-.col-8{
+.col-8 {
 	width: 66.66%;
 }
-.col-9{
+.col-9 {
 	width: 75%;
 }
-.col-10{
+.col-10 {
 	width: 83.33%;
 }
-.col-11{
+.col-11 {
 	width: 91.66%;
 }
-.col-12{
+.col-12 {
 	width: 100%;
 }
